# kefilex-desk

./: .gitignore  BUILDING.md  LICENSE  README.md  SIGNING.md  SOFTPHONES.md  index.html  package.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: api.rs  audio_listener.rs  config.rs  heartbeat.rs  lib.rs  main.rs  notification_listener.rs  tray.rs  voip_filters.rs
